jaat changed to biboron

--- a/views/pd/charaKolomPrice/seasonalFlower/seasonalFlowerForm.ejs
+++ b/views/pd/charaKolomPrice/seasonalFlower/seasonalFlowerForm.ejs
@@ -28,7 +28,7 @@
                                             <div class="col-md-9">
                                 <label >বাছুন :</label>
                                 <select id="item" name="item" required>
-                                    <option value="">আইটেমের নাম (জাতওয়ারী)</option>
+                                    <option value="">আইটেমের নাম </option>
                                     <% if (records.length >0){ %>
                                         <% records.forEach(function (row) { %>
                                             <option value="<%= row.name %>"><%= row.name %></option>
