--- a/views/pd/charaKolomPrice/seasonalFlower/seasonalFlowerTable.ejs
+++ b/views/pd/charaKolomPrice/seasonalFlower/seasonalFlowerTable.ejs
@@ -3,7 +3,7 @@
     <thead>
     <tr>
         <th>ক্রমিক নং</th>
-        <th>আইটেমের নাম (জাতওয়ারী)</th>
+        <th>আইটেমের নাম </th>
         <th>পরিমাণ</th>
         <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
         <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
