--- a/views/pd/charaKolomPrice/winterVeg/winterVegTable.ejs
+++ b/views/pd/charaKolomPrice/winterVeg/winterVegTable.ejs
@@ -3,7 +3,7 @@
     <thead>
     <tr>
         <th>ক্রমিক নং</th>
-        <th>আইটেমের নাম (জাতওয়ারী)</th>
+        <th>আইটেমের নাম </th>
         <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
         <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
         <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
@@ -31,7 +31,7 @@
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
-            <th>আইটেমের নাম (জাতওয়ারী)</th>
+            <th>আইটেমের নাম </th>
         <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
         <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
         <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
