--- a/views/pd/charaKolomPrice/otherFlower/otherFlowerEdit.ejs
+++ b/views/pd/charaKolomPrice/otherFlower/otherFlowerEdit.ejs
@@ -25,9 +25,9 @@
 
                                         
                                     <div class="form-group">
-                                        <label for="item" class="col-md-3 control-label">আইটেমের নাম (জাতওয়ারী)</label>
+                                        <label for="item" class="col-md-3 control-label">আইটেমের নাম </label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম (জাতওয়ারী)" value="<%= records.item %>">
+                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম " value="<%= records.item %>">
                                         </div>
                                     </div>
                                     
