--- a/views/pd/charaKolomPrice/otherFlower/otherFlowerTable.ejs
+++ b/views/pd/charaKolomPrice/otherFlower/otherFlowerTable.ejs
@@ -3,7 +3,7 @@
     <thead>
     <tr>
         <th>ক্রমিক নং</th>
-        <th>আইটেমের নাম (জাতওয়ারী)</th>
+        <th>আইটেমের নাম </th>
         <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
         <th>টবে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
         <th>পরিবর্তন/মুছুন</th>
@@ -30,7 +30,7 @@
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
-            <th>আইটেমের নাম (জাতওয়ারী)</th>
+            <th>আইটেমের নাম </th>
             <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
             <th>টবে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
         </tr>
