--- a/views/charaKolomFixed.ejs
+++ b/views/charaKolomFixed.ejs
@@ -95,7 +95,7 @@
                     <tr>
                         <th style="color: #ffffff">চারা/কলমের নাম</th>
                         <th style="color: #ffffff">চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-                        <th style="color: #ffffff">চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
+                        <th style="color: #ffffff">চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত বিক্রয়মূল্য</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -114,7 +114,7 @@
                             <tr>
                                 <th style="color: #ffffff">চারা/কলমের নাম</th>
                                 <th style="color: #ffffff">চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-                                <th style="color: #ffffff">চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
+                                <th style="color: #ffffff">চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত বিক্রয়মূল্য</th>
                             </tr>
                         </thead>
                         <tbody>
