--- a/views/pd/charaKolomPrice/seasonalFlower/seasonalFlowerForm.ejs
+++ b/views/pd/charaKolomPrice/seasonalFlower/seasonalFlowerForm.ejs
@@ -23,6 +23,15 @@
                                         <span></span>
                                     </div>
 
+                                    <% if(messages.message){ %>
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <strong><%= messages.message %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
+
                                     <div class="form-group">
                                         <div class="col-md-9">
                                             <div class="col-md-9">
@@ -83,7 +92,10 @@
                                         </div>
                                     </div>
                                     
-                                    
+                                    <div class="col-md-offset-3 col-md-9">
+                                    <button> <a href="/pd/seasonalFlower" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
+                                     </button>
+                                     </div>
                                         
                                     
                                 </form>
