--- a/views/charaKolomFixed.ejs
+++ b/views/charaKolomFixed.ejs
@@ -44,7 +44,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="/">
-                <img src="/landingPage/images/logo.png" alt="Homepage">
+                <img src="/landingPage/images/daelogo.png" alt="DAE">
             </a>
         </div>
 
@@ -54,7 +54,7 @@
 
             <div class="header-nav__content">
                 <h3>নেভিগেশন</h3>
-                
+
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">হোম</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">চারা কলম তালিকা</a></li>
