--- a/views/center/employee/chak1/employeeChak1Edit.ejs
+++ b/views/center/employee/chak1/employeeChak1Edit.ejs
@@ -9,33 +9,24 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>ক্যাডার/নন ক্যাডার কর্মকর্তাদের নাম ও পদবী সহ শূন্য পদের তথ্য ফর্ম</h2></div>
+                                <div class="panel-title"><h2>কর্মকর্তা কর্মচারীদের পদবী ও গ্রেডের তালিকার ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
                                     <% } %>
                                 </p>
                                 </div>  
-                                
                             <div class="panel-body" >
-                                <form action="/center/chak1Forms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/center/chak1EditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
                                     </div>
-
-                                    <% if(messages.message){ %>
-                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                            <strong><%= messages.message %></strong>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                    <% } %>
+                                    
                                     <div class="form-group">
                                         <label for="center" class="col-md-3 control-label">হরটিকালচার সেন্টারের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="হরটিকালচার সেন্টারের নাম">
+                                            <input type="text" class="form-control" name="center" value="<%= records.center %>" >
                                         </div>
                                     </div>
                                     
@@ -43,101 +34,67 @@
                                     <div class="form-group">
                                         <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম ও মোবাইল নং</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="kormokorta" placeholder="কর্মকর্তার নাম ও মোবাইল নং">
+                                            <input type="text" class="form-control" name="kormokorta" value="<%= records.kormokorta %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="porichito" class="col-md-3 control-label">পরিচিতি নং</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="porichito" placeholder="পরিচিতি নং">
+                                            <input type="text" class="form-control" name="porichito" value="<%= records.porichito %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="nijDistrict" class="col-md-3 control-label">নিজ জেলা</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="nijDistrict" placeholder="নিজ জেলা">
+                                        <input type="text" class="form-control" name="nijDistrict" value="<%= records.nijDistrict %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="podobi" class="col-md-3 control-label">পদবী</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="podobi" placeholder="পদবী">
+                                            <input type="text" class="form-control" name="podobi" value="<%= records.podobi %>">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="birthDate" class="col-md-3 control-label">জন্ম তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="date" class="form-control" name="birthDate" placeholder="জন্ম তারিখ">
+                                            <input type="date" class="form-control" name="birthDate" value="<%= records.birthDate %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="firstdate" class="col-md-3 control-label">চাকুরীতে প্রথম যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="date" class="form-control" name="firstdate" placeholder="চাকুরীতে প্রথম যোগদানের তারিখ">
+                                            <input type="date" class="form-control" name="firstdate" value="<%= records.firstdate %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="presentDate" class="col-md-3 control-label">বর্তমান কর্মস্থলে যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                        <input type="date" class="form-control" name="presentDate" placeholder="বর্তমান কর্মস্থলে যোগদানের তারিখ">
+                                        <input type="date" class="form-control" name="presentDate" value="<%= records.presentDate %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ">
+                                            <input type="text" class="form-control" name="pastWorkstation" value="<%= records.pastWorkstation %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="comment" placeholder="মন্তব্য">
+                                            <input type="text" class="form-control" name="comment" value="<%= records.comment %>">
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <div class="col-md-9">
-                                            <label for="month">মাস :</label>
-                                        <select id="month" name="month" required>
-                                            <option value="january">জানুয়ারি</option>
-                                            <option value="february">ফেব্রুয়ারি</option>
-                                            <option value="march">মার্চ</option>
-                                            <option value="april">এপ্রিল</option>
-                                            <option value="may">মে</option>
-                                            <option value="june">জুন</option>
-                                            <option value="july">জুলাই</option>
-                                            <option value="august">আগস্ট</option>
-                                            <option value="september">সেপ্টেম্বর</option>
-                                            <option value="october">অক্টোবর</option>
-                                            <option value="november">নভেম্বর</option>
-                                            <option value="december">ডিসেম্বর</option>
-                                        </select>
-                                        </div>
-                                    </div>
+                                    <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
                                     
-                                    <div class="form-group">
-                                        <div class="col-md-9">
-                                            <label for="year">বছর :</label>
-                                        <select id="year" name="year" required>
-                                            <option value="2017">২০১৭-১৮</option>
-                                            <option value="2018">২০১৮-১৯</option>
-                                            <option value="2019">২০১৯-২০</option>
-                                            <option value="2020">২০২০-২১</option>
-                                            <option value="2021">২০২১-২২</option>
-                                            <option value="2022">২০২২-২৩</option>
-                                        </select>
-                                        </div>
-                                    </div>
-
-                                            <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
-                                      
                                     <div class="form-group">
                                         <!-- Button -->                                        
                                         <div class="col-md-offset-3 col-md-9">
@@ -145,10 +102,7 @@
                                         </div>
                                     </div>
                                     
-                                    <div class="col-md-offset-3 col-md-9">
-                                    <button> <a href="/center/chak1" class="col-md-offset-3 col-md-9">Finish Submitting Report</a>
-                                     </button>
-                                     </div>
+                                    
                                         
                                     
                                 </form>
