--- a/views/center/employee/chak1/employeeChak1Table.ejs
+++ b/views/center/employee/chak1/employeeChak1Table.ejs
@@ -12,6 +12,7 @@
         <th>বর্তমান কর্মস্থলে যোগদানের তারিখ</th>
         <th>পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</th>
         <th>মন্তব্য</th>
+        <th>পরিবর্তন/মুছুন</th>
     </tr>
     </thead>
     <tbody>
@@ -27,6 +28,9 @@
                 <td><%= row.presentDate %></td>
                 <td><%= row.pastWorkstation %></td>
                 <td><%= row.comment %></td>
+                <td><a class="btn btn-primary btn-xs" href="/center/chak1Edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/center/chak1Delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                </td>
                
             </tr>
         <% }) %>
