--- a/views/center/employee/chak2/employeeChak2Edit.ejs
+++ b/views/center/employee/chak2/employeeChak2Edit.ejs
@@ -27,7 +27,7 @@
                                     <div class="form-group">
                                         <label for="podobi" class="col-md-3 control-label">পদের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="name" value="<%= records.name %>">
+                                            <input type="text" class="form-control" name="name^" value="<%= records.name %>">
                                         </div>
                                     </div>
                                     
