--- a/views/center/employee/chak1/employeeChak1Edit.ejs
+++ b/views/center/employee/chak1/employeeChak1Edit.ejs
@@ -24,7 +24,7 @@
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="center" class="col-md-3 control-label">হরটিকালচার সেন্টারের নাম</label>
+                                        <label for="center" class="col-md-3 control-label">হর্টিকালচার সেন্টারের নাম</label>
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" name="center" value="<%= records.center %>" >
                                         </div>
