--- a/views/charaKolomFixed.ejs
+++ b/views/charaKolomFixed.ejs
@@ -86,7 +86,7 @@
           
             <div class="row home-content__main">
 
-                <h1 class="text-center">১. হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
+                <h1 class="text-center">১. হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record1.length >0){ %>
@@ -156,7 +156,7 @@
           
             <div class="row home-content__main">
 
-                <h1 class="text-center">২. হরটিকালচার সেন্টারের ফল/মসলা ও শাক-সবজি বিক্রয় মূল্য</h1>
+                <h1 class="text-center">২. হর্টিকালচার সেন্টারের ফল/মসলা ও শাক-সবজি বিক্রয় মূল্য</h1>
             
             <div class="table-responsive" id="output">
                 <%if (record2.length >0){ %>
