--- a/views/center/employee/chak2/employeeChak2.ejs
+++ b/views/center/employee/chak2/employeeChak2.ejs
@@ -58,15 +58,16 @@
                         
                         <div class="row mb-2">
                             <div class="col-md-12">
-                                <a href="/center/chak2Form" class="btn btn-success btn-group-sm ">হরটিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা ফর্ম</a>
+                                <a href="/center/chak2Form" class="btn btn-success btn-group-sm ">হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা ফর্ম</a>
                             </div>
 
                         </div>
 
                         <div class="table-responsive" id="output"></div>
 
-                        <input type="button" id="btnExport" value="Download PDF" />
-
+                        <button onclick="exportToPdf()" class="btn btn-success">
+                            Download PDF
+                        </button>
                         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
                     </div>
@@ -77,6 +78,21 @@
 
    
 <%- include('../../../includes/footer')-%>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+    async function exportToPdf() {
+        var year = $('#year').val();
+        var month = $('#month').val();
+        var center = $('#center').val();
+        const { data } = await axios.post(`/center/generatePdfchak2`,{year: year,month:month, center:center});
+        var mywindow = window.open("", "PRINT", "height=400,width=600");
+        mywindow.document.write(data.html);
+        mywindow.document.close(); // necessary for IE >= 10
+        mywindow.focus(); // necessary for IE >= 10*/
+        mywindow.print();
+        return true;
+    }
+</script>
 <script>
         
     $(document).ready(function(){
