--- a/views/center/monthlyProgress/pdf.ejs
+++ b/views/center/monthlyProgress/pdf.ejs
@@ -12,11 +12,11 @@
             justify-content: center
         }
         .table, td, th {
-          border: 1px solid black;
+            border: 1px solid black;
         }
         .table {
-          width: 100%;
-          border-collapse: collapse;
+            width: 100%;
+            border-collapse: collapse;
         }
         .center {
             text-align: center;
@@ -30,9 +30,10 @@
 
 <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
+        <h1>মাসিক প্রতিবেদন</h1>
+        <p><b>সেন্টারের নাম :</b><%= centerName %></p>
         <%if (records.length >0){ %>
-<!--            <input type="hidden" id="selectedDate" value="<%= selectedDate %>">-->
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+            <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
                 <thead>
                 <tr>
                     <th>ক্যাটাগরি নাম</th>
@@ -60,7 +61,7 @@
                 <% records.forEach(function(row){ %>
 
                     <%
-                        const currentMonth = selectedDate
+                        const currentMonth = moment().format("MMM-YYYY").toLowerCase();
                         var startRange = "";
                         var endRange = "";
 
@@ -68,22 +69,22 @@
                         var prevEconomicEnd = "";
 
                         if (moment().format("M") < 7){
-                            startRange = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
-                            endRange = "jul"+"-"+moment().format('yyyy')
+                            startRange = "jul"+"-"+moment(selectedDate).subtract(1, "year").format('yyyy')
+                            endRange = "jul"+"-"+moment(selectedDate).format('yyyy')
                         }else{
-                            startRange = "jul"+"-"+moment().format('yyyy')
-                            endRange = "jul"+"-"+moment().add(1, "year").format('yyyy')
+                            startRange = "jul"+"-"+moment(selectedDate).format('yyyy')
+                            endRange = "jul"+"-"+moment(selectedDate).add(1, "year").format('yyyy')
                         }
 
 
                         // Previous Economic year
 
                         if (moment().format("M") < 7){
-                            prevEconomicStart = "jul"+"-"+moment().subtract(2, "year").format('yyyy')
-                            prevEconomicEnd = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
+                            prevEconomicStart = "jul"+"-"+moment(selectedDate).subtract(2, "year").format('yyyy')
+                            prevEconomicEnd = "jul"+"-"+moment(selectedDate).subtract(1, "year").format('yyyy')
                         }else{
-                            prevEconomicStart = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
-                            prevEconomicEnd = "jul"+"-"+moment().format('yyyy')
+                            prevEconomicStart = "jul"+"-"+moment(selectedDate).subtract(1, "year").format('yyyy')
+                            prevEconomicEnd = "jul"+"-"+moment(selectedDate).format('yyyy')
                         }
 
                         // current production (  উৎপাদন  )*******
@@ -94,7 +95,7 @@
                             if ( prodCurrent.time === selectedDate ) {
                                 currentProductionSum += parseInt(prodCurrent.amount)
                             }
-                            else if ( moment( prodCurrent.time ).isBefore(selectedDate) && moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
+                            else if ( moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
                                 previousMonthProduction += parseInt(prodCurrent.amount)
                             }
                         })
@@ -103,7 +104,7 @@
                         var productionTargetSum = 0;
                         const TargetProduction = JSON.parse(row.productionTarget)
                         TargetProduction.forEach(function(prodTarget){
-                            if ( moment(currentMonth).isAfter(prodTarget.startTime) &&  moment(currentMonth).isBefore(prodTarget.endTime) ){
+                            if ( moment(selectedDate).isAfter(prodTarget.startTime) &&  moment(selectedDate).isBefore(prodTarget.endTime) ){
                                 productionTargetSum += parseInt(prodTarget.amount)
                             }
                         })
@@ -112,7 +113,7 @@
                         var totalProductionSum = 0;
                         const TotalProduction = JSON.parse(row.productionTotal)
                         TotalProduction.forEach(function(prodTotal){
-                            if ( moment(currentMonth).isAfter(prodTotal.startTime) &&  moment(currentMonth).isBefore(prodTotal.endTime) ){
+                            if ( moment(selectedDate).isAfter(prodTotal.startTime) &&  moment(selectedDate).isBefore(prodTotal.endTime) ){
                                 totalProductionSum += parseInt(prodTotal.amount)
                             }
                         })
@@ -142,7 +143,7 @@
                             if ( BitoCurrent.time === selectedDate ) {
                                 currentBitoronSum += parseInt(BitoCurrent.amount)
                             }
-                            else if ( moment( BitoCurrent.time ).isBefore(selectedDate) && moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
+                            else if ( moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
                                 previousMonthBitoronSum += parseInt(BitoCurrent.amount)
                             }
                         })
@@ -151,7 +152,7 @@
                         var totalBitoronSum = 0;
                         const TotalBitoron = JSON.parse(row.bitoronTotal)
                         TotalBitoron.forEach(function(bitorTotal){
-                            if ( moment(currentMonth).isAfter(bitorTotal.startTime) &&  moment(currentMonth).isBefore(bitorTotal.endTime) ){
+                            if ( moment(selectedDate).isAfter(bitorTotal.startTime) &&  moment(selectedDate).isBefore(bitorTotal.endTime) ){
                                 totalBitoronSum += parseInt(bitorTotal.amount)
                             }
                         })
@@ -178,7 +179,7 @@
                         // var currentMojudSum = 0;
                         // const currMojud = JSON.parse(row.mojud)
                         // currMojud.forEach(function(MojudCurrent){
-                        //     if ( MojudCurrent.time === selectedDate ) {
+                        //     if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
                         //         currentMojudSum += parseInt(MojudCurrent.amount)
                         //     }
                         // })
@@ -202,17 +203,17 @@
                         <td><%= new Number(productionTargetSum).toLocaleString("bn-BD") %></td>
                         <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td>
                         <td> <%= new Number(previousMonthProduction).toLocaleString("bn-BD") %> </td>
-                        <td> <%= new Number(currentProductionSum + previousMonthProduction).toLocaleString("bn-BD") %> </td>
+                        <td> <%= new Number(totalProductionSum).toLocaleString("bn-BD") %> </td>
                         <td> <%= new Number(daePraptiSum).toLocaleString("bn-BD") %> </td>
                         <td> <%= new Number(prevYearJer).toLocaleString("bn-BD") %> </td>
-                        <td> <%= new Number(currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td>
+                        <td> <%= new Number(totalProductionSum + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td>
                         <td><%= new Number(currentBitoronSum).toLocaleString("bn-BD") %></td>
                         <td><%= new Number(previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
-                        <td><%= new Number(currentBitoronSum + previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
+                        <td><%= new Number(totalBitoronSum).toLocaleString("bn-BD") %></td>
                         <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td>
                         <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
                         <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
-                        <td><%= new Number((currentProductionSum + previousMonthProduction )-(currentBitoronSum + previousMonthBitoronSum)).toLocaleString("bn-BD") %></td>
+                        <td><%= new Number((totalProductionSum ) - (totalBitoronSum )).toLocaleString("bn-BD") %></td>
                         <td><%= montobboSum %></td>
                     </tr>
                 <% }) %>
