--- a/views/pd/charaKolomPrice/charaKolom/charaKolom.ejs
+++ b/views/pd/charaKolomPrice/charaKolom/charaKolom.ejs
@@ -26,7 +26,7 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col-md-12">
-                            <a href="/pd/charaKolomForm" class="btn btn-success btn-group-sm ">হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য ফর্ম</a>
+                            <a href="/pd/charaKolomForm" class="btn btn-success btn-group-sm ">হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য ফর্ম</a>
                         </div>
 
                     </div>
@@ -46,7 +46,20 @@
     </div>
 
     <%- include('../../../includes/footer')-%>
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+        async function exportToPdf() {
+            var year = $('#startDate').val();
+            var center = $('#center').val();
+            const { data } = await axios.post(`/pd/generatePdfcharaKolom`,{year: year, center:center});
+            var mywindow = window.open("", "PRINT", "height=400,width=600");
+            mywindow.document.write(data.html);
+            mywindow.document.close(); // necessary for IE >= 10
+            mywindow.focus(); // necessary for IE >= 10*/
+            mywindow.print();
+            return true;
+        }
+    </script>
     <script>
         
         $(document).ready(function(){
