--- a/views/pd/charaKolomPrice/charaKolom/charaKolomForm.ejs
+++ b/views/pd/charaKolomPrice/charaKolom/charaKolomForm.ejs
@@ -9,7 +9,7 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য ফর্ম</h2></div>
+                                <div class="panel-title"><h2>হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
