--- a/views/pd/charaKolomPrice/otherFlower/otherFlower.ejs
+++ b/views/pd/charaKolomPrice/otherFlower/otherFlower.ejs
@@ -48,7 +48,20 @@
 
 
     <%- include('../../../includes/footer')-%>
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+        async function exportToPdf() {
+            var year = $('#startDate').val();
+            var center = $('#center').val();
+            const { data } = await axios.post(`/pd/generatePdfotherFlower`,{year: year, center:center});
+            var mywindow = window.open("", "PRINT", "height=400,width=600");
+            mywindow.document.write(data.html);
+            mywindow.document.close(); // necessary for IE >= 10
+            mywindow.focus(); // necessary for IE >= 10*/
+            mywindow.print();
+            return true;
+        }
+    </script>
     <script>
         
         $(document).ready(function(){
