--- a/views/pd/employee/chak1/employeeChak1Form.ejs
+++ b/views/pd/employee/chak1/employeeChak1Form.ejs
@@ -25,9 +25,9 @@
 
                                         
                                     <div class="form-group">
-                                        <label for="center" class="col-md-3 control-label">হরটিকালচার সেন্টারের নাম</label>
+                                        <label for="center" class="col-md-3 control-label">হর্টিকালচার সেন্টারের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="হরটিকালচার সেন্টারের নাম">
+                                            <input type="text" class="form-control" name="center" placeholder="হর্টিকালচার সেন্টারের নাম">
                                         </div>
                                     </div>
                                     
