--- a/views/pd/employee/chak2/pdf.ejs
+++ b/views/pd/employee/chak2/pdf.ejs
@@ -31,9 +31,9 @@
 <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
         <h1>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</h1>
-        <p><b>সেন্টারের নাম :</b><%= centerName %></p>
+        <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
         <%if (records.length >0){ %>
-            <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
             <thead>
             <tr>
                 <th>পদের নাম</th>
@@ -53,6 +53,7 @@
                         <td><%= row.working %></td>
                         <td><%= row.shunno %></td>
                         <td><%= row.comment %></td>
+                       
                     </tr>
                 <% }) %>
             </tbody>
