--- a/views/pd/expense/pdf.ejs
+++ b/views/pd/expense/pdf.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>খরচের (বিএস্টেটমেন্ট) হিসাব বিবরণী</title>
+    <title>সেন্টারের নাম :  <%= centerName.center %></title>
 
     <style>
         .flex-container {
@@ -31,7 +31,7 @@
 <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
         <h1>খরচের (বিএস্টেটমেন্ট) হিসাব বিবরণী</h1>
-        <p><b>সেন্টারের নাম :</b><%= centerName %></p>
+        <p><b>সেন্টারের নাম : </b>  <%= centerName.center %></p>
         <%if (records.length >0){ %>
             <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
             <thead>
