--- a/views/pd/worker/workerNum/workerNum.ejs
+++ b/views/pd/worker/workerNum/workerNum.ejs
@@ -71,7 +71,9 @@
 
                         <div class="table-responsive" id="output"></div>
 
-                        <input type="button" id="btnExport" value="Download PDF" />
+                        <button onclick="exportToPdf()" class="btn btn-success">
+                            Download PDF
+                        </button>
                         <button onclick="exportToExcel('tblexportData', 'অনিয়মিত শ্রমিকদের তথ্য')" class="btn btn-success">Export Table Data To Excel File</button>
 
 
@@ -88,9 +90,10 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
     async function exportToPdf() {
-        var year = $('#startDate').val();
+        var year = $('#year').val();
+        var month = $('#month').val();
         var center = $('#center').val();
-        const { data } = await axios.post(`/pd/generatePdfworkerNum`,{year: year, center:center});
+        const { data } = await axios.post(`/pd/generatePdfworkerNum`,{year: year,month:month, center:center});
         var mywindow = window.open("", "PRINT", "height=400,width=600");
         mywindow.document.write(data.html);
         mywindow.document.close(); // necessary for IE >= 10
