--- a/views/pd/worker/workerInfo/workerInfoTable.ejs
+++ b/views/pd/worker/workerInfo/workerInfoTable.ejs
@@ -26,8 +26,8 @@
                 <td><%= row.date %></td>
                 <td><%= row.nid %></td>
                 <td><%= row.bank %></td>
-                <td><a class="btn btn-primary btn-xs" href="/center/workerInfoEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/center/workerInfoDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/pd/workerInfoEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/workerInfoDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         <% }) %>
