--- a/views/pd/worker/workerNum/pdf.ejs
+++ b/views/pd/worker/workerNum/pdf.ejs
@@ -31,7 +31,12 @@
 <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
         <h1>শ্রমিকের সংখ্যা</h1>
-        <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
+        <p><b>সেন্টারের নাম :</b>
+            <%if (centerName.length < 0){ %>
+                all center</p>
+            <% }else{ %>
+                <%= centerName.center %></p>
+            <% } %>
         <%if (records.length >0){ %>
             <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
             <thead>
