--- a/views/center/dashboard.ejs
+++ b/views/center/dashboard.ejs
@@ -73,6 +73,58 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="container gallery-container">
+                            <h1 text-align:center>Notice Board</h1>
+                            
+                            <div class="tz-gallery">
+                                <div class="row">
+                                    <%if (dashImage.length >0){ %>
+                                        <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+                                        <thead>
+                                        <tr>
+                                            <th>ক্রমিক নং</th>
+                                            <th>টাইটেল</th>
+                                            <th>ফাইল</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                            <% dashImage.forEach(function(row,index){ %>
+                                                <tr>
+                                                    <td><%= index+1 %></td>
+                                                    <td><%= row.title %></td>
+                                                    <td><a  href="<%= row.image %>"><i class="fas fa-file"></i>
+                                                </tr>
+                                            <% }) %>
+                                        </tbody>
+                                    </table>
+                                    <% }else{ %>
+                                        <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+                                            <thead>
+                                            <tr>
+                                                <th>ক্রমিক নং</th>
+                                                <th>টাইটেল</th>
+                                                <th>ফাইল</th>
+                                                <th>পরিবর্তন/মুছুন</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <% records.forEach(function(row){ %>
+                                                <tr>
+                                                    <td colspan="10">No data Found</td>
+                                                </tr>
+                                            <% }) %>
+                                            </tbody>
+                                        </table>
+                                    <% } %>
+                                    
+
+                                </div>
+                        
+                            </div>
+                        
+                        </div>
+
                     </div>
                 </div>
             </div>
