--- a/views/center/topSheet/topSheet.ejs
+++ b/views/center/topSheet/topSheet.ejs
@@ -31,7 +31,6 @@
 
                         <div class="table-responsive" id="output"></div>
 
-                        <input type="button" id="btnExport" value="Download PDF" />
 
                         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
@@ -43,6 +42,7 @@
 
    
 <%- include('../../includes/footer')-%>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
         
     $(document).ready(function(){
